# videostream2py

./: README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
videostream2py/: video.py
