[metadata]
name = videostream2py
version = 0.0.2
url = https://github.com/i2mint/videostream2py
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = stream2py interface to video
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = videostream2py

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

